--- a/src/components/sections/HeroSection/HeroSection.css
+++ b/src/components/sections/HeroSection/HeroSection.css
@@ -449,8 +449,10 @@
   }
 
   .hero__title-line {
-    font-size: 2rem;
+    font-size: 40px !important;
     text-align: center;
+    width: 100%;
+    display: block;
   }
 
   .hero__benefit-item {
